--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,9 @@ jobs:
     needs: [commit-trigger]
     env:
       PYODIDE_PACKAGES: ${{ matrix.pyodide_packages }}
+      MY_EXPR: ${{ matrix.my_expr }}
+      MY_EXPR2: ${{ matrix.my_expr2 }}
+      MY_EXPR3: ${{ matrix.my_expr3 }}
 
     steps:
       - uses: actions/checkout@v4
@@ -30,6 +33,9 @@ jobs:
         shell: bash -l {0}
         run: |
           echo $PYODIDE_PACKAGES
+          echo $MY_EXPR
+          echo $MY_EXPR2
+          echo $MY_EXPR3
 
   test-scipy:
     runs-on: ubuntu-latest
