--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,20 +6,20 @@ on:
 
 jobs:
   build-core:
+    runs-on: ${{ matrix.os }}
+    needs: [commit-trigger]
     strategy:
       fail-fast: false
       matrix:
         include:
           - os: ubuntu-latest
-            pyodide_packages: "tag:core,numpy${{ needs.test-scipy-trigger.outputs.test == 'true' && ',scipy' || '' }}"
-            my_expr: ${{ needs.test-scipy-trigger.outputs.test }}
-            my_expr2: ${{ needs.test-scipy-trigger.outputs.test == 'true' && ',scipy' || '' }}
-            my_expr3: ${{ needs.test-scipy-trigger.outputs.test && ',scipy' || '' }}
+            pyodide_packages: "tag:core,numpy${{ needs.commit-trigger.outputs.test == 'true' && ',scipy' || '' }}"
+            my_expr: ${{ needs.commit-trigger.outputs.test }}
+            my_expr2: ${{ needs.commit-trigger.outputs.test == 'true' && ',scipy' || '' }}
+            my_expr3: ${{ needs.commit-trigger.outputs.test && ',scipy' || '' }}
 
           - os: macos-14
             pyodide_packages: "tag:core,numpy"
-    runs-on: ${{ matrix.os }}
-    needs: [commit-trigger]
     env:
       PYODIDE_PACKAGES: ${{ matrix.pyodide_packages }}
       MY_EXPR: ${{ matrix.my_expr }}
